@@ -1,6 +1,6 @@
 Package: exams
 Version: 2.2-1
-Date: 2017-02-16
+Date: 2017-03-06
 Title: Automatic Generation of Exams in R
 Authors@R: c(person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org"),
              person(given = "Bettina", family = "Gruen", role = "aut", email = "Bettina.Gruen@jku.at"),
@@ -12,10 +12,10 @@ Authors@R: c(person(given = "Achim", family = "Zeileis", role = c("aut", "cre"),
 Description: Automatic generation of exams based on exercises in Markdown or LaTeX format,
 	possibly including R code for dynamic generation of exercise elements.
 	Exercise types include single- and multiple-choice questions, arithmetic problems,
-	string questions, and combinations thereof (cloze). Output formats include
-	PDF, HTML, Moodle XML, QTI 1.2 (for OLAT/OpenOLAT), QTI 2.1, Blackboard, Ilias, ARSnova, and TCExam.
-	In addition to fully customizable PDF exams, a standardized PDF format is provided that can be
-	printed, scanned, and automatically evaluated.
+	string questions, and combinations thereof (cloze). Output formats include standalone
+	files (PDF, HTML, Docx, ODT, ...), Moodle XML, QTI 1.2 (for OLAT/OpenOLAT), QTI 2.1,
+	Blackboard, Ilias, ARSnova, and TCExam. In addition to fully customizable PDF exams, a
+	standardized PDF format is provided that can be printed, scanned, and automatically evaluated.
 Depends: R (>= 3.0.0)
 Imports: stats, graphics, grDevices, tools, utils
 Suggests: base64enc, knitr, parallel, png, RCurl, RJSONIO, rmarkdown, tth
