@@ -91,7 +91,10 @@ export(
   "make_exams_write_arsnova",
   
   ## TCExam driver
-  "exams2tcexam"
+  "exams2tcexam",
+  
+  ## Pandoc driver
+  "exams2pandoc"
 )
 
 S3method("print", "exams_metainfo")
