@@ -1,0 +1,42 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+
+<head>
+<style type="text/css">
+body{font-family:Arial;}
+</style>
+<meta charset="utf-8">
+</head>
+
+<body>
+
+<!-- Exam ##ID## -->
+<!-- ##Date## -->
+
+<ol>
+#-
+  <li>
+#-
+  <b>##Questionheader##</b><br/>
+#-
+  ##Question##
+#-
+  <ol type="a">
+    <li>##Questionlist##</li>
+  </ol>
+#-
+  <br/>
+  <b>##Solutionheader##</b>
+#-
+  ##Solution##
+#-
+  <ol type="a">
+    <li>##Solutionlist##</li>
+  </ol>
+#-
+  </li>
+#-
+</ol>
+
+</body>
+</html>
