@@ -1,0 +1,23 @@
+<!-- Exam ##ID## -->
+<!-- ##Date## -->
+
+#-
+  *
+#-
+  ##Questionheader##
+  ==================
+#-
+  ##Question##
+#-
+    * ##Questionlist##
+#-
+  ##Solutionheader##
+  ==================
+#-
+  ##Solution##
+#-
+    * ##Solutionlist##
+#-
+
+#-
+
