@@ -1,0 +1,35 @@
+\documentclass[a4paper]{article}
+
+\usepackage[utf8]{inputenc}
+\usepackage{a4wide,color,Sweave,url,amsmath,booktabs,longtable}
+
+\begin{document}
+
+%% Exam ##ID##
+%% ##Date##
+
+\begin{enumerate}
+#-
+  \item
+#-
+  \textbf{##Questionheader##}\\
+#-
+  ##Question##
+#-
+  \begin{enumerate}[(a)]
+    \item ##Questionlist##
+  \end{enumerate}
+#-
+
+  \textbf{##Solutionheader##}\\
+#-
+  ##Solution##
+#-
+  \begin{enumerate}[(a)]
+    \item ##Solutionlist##
+  \end{enumerate}
+#-
+#-
+\end{enumerate}
+
+\end{document}
